[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "Reduino"
version = "0.1.0"
description = "Pythonic Arduino transpiler: write Python, get Arduino C++ and flash."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Arnav Bajaj" }]
keywords = ["arduino", "embedded", "transpiler", "robotics", "avr", "cpp"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Code Generators",
  "Topic :: System :: Hardware :: Universal Serial Bus (USB)"
]

dependencies = [
  "pytest"
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy", "build", "twine"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["Reduino*"]

[tool.setuptools.package-data]
"Reduino" = ["templates/**", "assets/**"]

[tool.ruff]
line-length = 100